--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,24 +1,34 @@
 name: Docker
 on:
-  workflow_dispatch:
   push:
+  workflow_dispatch:
+  schedule:
+    - cron: '54 2 2 * *'
 jobs:
   buildDockerImage:
     name: Build Docker image
     runs-on: ubuntu-latest
     steps:
-    - name: Check out code
-      uses: actions/checkout@v1
-      with:
-        fetch-depth: 1
-    - name: Push to Quay
-      uses: docker/build-push-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        registry: quay.io
-        repository: wisvch/connect
-        tag_with_ref: true
-        tag_with_sha: true
-        add_git_labels: true
-        push: ${{ github.ref == 'refs/heads/master' }}
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: ghcr.io/wisvch/connect
+          tags: type=sha, prefix={{date 'YYYYMMDD'}}-
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          push: ${{ github.ref == 'refs/heads/master' }}
